--- a/apple.html
+++ b/apple.html
@@ -5,39 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple TV</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nabar__container">
             <a href="/" id="nav__logo">Apple TV</a>
-            <div class="navbar__toggle" id="aplle-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <div class="navbar__toggle" id="apple-menu">
+                <span class="bar"></span><span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="Top 10 Actors" class="navbar__links">
-                        Top 10 Actors
-                    </a>
+                    <a href="/" class="navbar__links"> Home</a>
+                </li>  
+                <li class="navbar__search">
+                    <a href="Search" class="button">Search</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="Top 10 Categories" class="navbar__links">
-                        Top 10 Categories
-                    </a>
-                </li>
-                <li class="navbar__item">
-                    <a href="Genres" class="navbar__links">
-                        Genres
-                    </a>
-                </li><li class="navbar__item">
-                    <a href="New Shows/Movies" class="navbar__links">
-                        New Shows/Movies
-                    </a>
-                </li></li><li class="navbar__item">
-                    <a href="New Shows/Movies by Actor" class="navbar__links">
-                        New Shows/Movies by Actor
             </ul>
         </div>
     </nav>
