--- a/apple.html
+++ b/apple.html
@@ -7,6 +7,7 @@
     <title>Apple TV</title>
     <link rel="stylesheet" href="Styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -27,7 +28,9 @@
         </div>
         <div id="myPie"></div>
         <div id="myPie2"></div>
+        <div id="bar"></div>
         <script src="pie.js"></script>
+        <script src="bars.js"></script>
 
     </nav>
 </body>
