--- a/apple.html
+++ b/apple.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="Styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="C:/Users/Owner/Desktop/anime-master/anime.min.js"></script>
 </head>
 <body>
+    <canvas class="fireworks"></canvas>
     <nav class="navbar">
         <div class="nabar__container">
             <a href="/" id="nav__logo">Apple TV</a>
@@ -31,7 +33,6 @@
         <div id="bar"></div>
         <script src="pie.js"></script>
         <script src="bars.js"></script>
-
     </nav>
 </body>
 </html>
