--- a/apple.html
+++ b/apple.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="Styles.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="C:/Users/Owner/Desktop/anime-master/anime.min.js"></script>
+    <script src="http://127.0.0.1:8887/anime.min.js"></script>
 </head>
 <body>
-    <canvas class="fireworks"></canvas>
+    <canvas class="fireworks"> </canvas><script src="fireworks.js"></script>
     <nav class="navbar">
         <div class="nabar__container">
             <a href="/" id="nav__logo">Apple TV</a>
