--- a/apple.html
+++ b/apple.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple TV</title>
     <link rel="stylesheet" href="Styles.css">
+    <script src="http://127.0.0.1:8887/anime.min.js"></script>
 </head>
 <body>
+  
     <div class="wrapper">
                 <h1>Apple TV</h1>
-                <img class="images-Ted Lasso" src="images/ted lasso.jpg" alt="Apple TV">
+                <img class="images-Ted Lasso" src="ted lasso.jpg" alt="Apple TV">
                 <!--div class= "images-pic1"></div>-->
     <nav class="navbar">
         <div class="nabar__container">
@@ -107,6 +109,7 @@
         
 
     </nav>
+    <canvas class="fireworks"> </canvas><script src="fireworks.js"></script>
 </body>
     <!--div id = "myPie" class="Pie"></div>-->
 </html>
