Added in ted lasso picture

--- a/apple.html
+++ b/apple.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
                 <h1>Apple TV</h1>
-                <img class="images-Ted Lasso" src="images/ted lasso.jpg" alt="Apple TV">
+                <img class="images-Ted Lasso" src="ted lasso.jpg" alt="Apple TV">
                 <!--div class= "images-pic1"></div>-->
     <nav class="navbar">
         <div class="nabar__container">
